Level generation is now more interesting, it generates a bunch of different shapes. Added the most important variables that control how gameplay feels on top of the game script as constants. Added an optimization into Zdog that causes invisible objects not to recalculate their transforms upon updating of graphs, resulting in easily doubled framerate when 275 boxes are loaded in. Fixed framerate to be 60fps. Minor interface tweaks to prevent bugs.

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ html, body {
 .jackpot {
   font-size: 20px;
   transform: translate(50%,100%) rotate(-10deg);
-  width: 100px;
+  width: 120px;
   color: black;
   background-color: white;
   mix-blend-mode: screen; /* This makes the cutout text possible */
@@ -116,6 +116,7 @@ html, body {
   font-size: 20px;
   transform: translate(-110%,50%);
   width: 80px;
+  border: 2px dotted white;
 }
 
 @keyframes gamestart-top {
